--- a/prototype/stylesheets/classic.css
+++ b/prototype/stylesheets/classic.css
@@ -1,32 +1,17 @@
-/******
-Browser: Firefox
-Interface: Touchscreen 
-Resolution: 800X600
-
- --------------------------------------------------------------------
- 
- Touchscreen Toolkit
-
- (c) 2006 Baobab Health Partnership www.baobabhealth.org
-
-This library is free software; you can redistribute it and/or
-modify it under the terms of the GNU Lesser General Public
-License as published by the Free Software Foundation; either
-version 2.1 of the License, or (at your option) any later version.
-
-This library is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-Lesser General Public License for more details.
-
-You should have received a copy of the GNU Lesser General Public
-License along with this library; if not, write to the Free Software
-Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
-
- --------------------------------------------------------------------
-
-
-******/
+/**************************************************************************
+  * classic.css
+  *   displays a basic (non-fancy) look and feel
+  *   CSS for the Touchscreen Toolkit library
+  *
+  * (c) 2011 Baobab Health Trust (http://www.baobabhealth.org)
+  *
+  * For lincense details, see the README.md file
+  *
+  * Browser:    Firefox
+  * Interface:  Touchscreen 
+  * Resolution: 800X600
+  *
+  **************************************************************************/
 
 body{
   font-family: "Nimbus Sans L", "Arial Narrow", sans-serif;
@@ -47,27 +32,40 @@ form{
 }
 
 .options, .optionsSearchPage, .touchscreenTextInput, .searchResults {
+  position: absolute; 
   font-size:1.5em;
+  width: 400px;
+  padding:5px;
+  margin-left:5px;
+  background-color: white;
+  border: 3px inset gray;
   -moz-user-select:none
 }
 
 .touchscreenTextInput{
-  border-top:none;
-  border-left:none;
-  border-right:none;
-  border-bottom: 1px solid silver;
-  width:945px;
-  font-family:"Nimbus Sans L","Arial Narrow",sans-serif;
-  font-size:2.2em;
-  background:none;
-  padding-left:5px;
+  position: absolute; 
+  top: 250px;
+  left: 25px;
+  background-color: lightblue;
+  border-color: lightblue;
+  border-style: inset;
+  border-width: 2px;
+}
+
+.options, .scrollable{
+  height: 6em;
+/*	overflow: hidden; */
 }
 
 .options{
+  top: 70px;
+  left: 25px;
+  border-style: solid;
+  border-color: lightblue;
+  border-width: 2px;
+  background-color: #ffff99;
 	overflow: auto;
-  height:10em;
 }
-
 .options ul{
   margin-top: 5px;
   margin-bottom: 5px;
@@ -75,13 +73,12 @@ form{
 }
 .options li{
   color: black;
+	font-size: 1.7em;
   list-style: none;
   padding-left: 5px;
   padding-right: 5px;
   margin-top: 5px;
   margin-bottom: 5px;
-  font-family:"Nimbus Sans L","Arial Narrow",sans-serif;
-  font-size:1.5em;
 }
 .optionsList{
   display:none;
@@ -101,15 +98,16 @@ form{
 }
 
 .buttonsDiv {
-  display:block;
-  height:80px;
-  position:absolute;
-  top:520px;
-  width:1000px;
-  z-index:10;
+	position: absolute;
+	right: 10px;
+	z-index: 10;
+	display: block;
+  height:250px;
+  left:640px;
+  top:0px;
 }
 
-/*.button {
+.button {
   display:block;
   font-size: 1.5em;
   color: black;
@@ -117,24 +115,29 @@ form{
   margin: 15px;
   border: 3px outset gray;
   -moz-user-select:none;
-  width: 90px;
-  height: 50px;
+  width: 100px;
+  height: 70px;
   text-align: center;
-  float:right;
-}*/
+}
 
 .keyboardButton, #launchButton{
   display: inline; /*-moz-inline-box;*/
+  color: black;
+  background-color: lightgray;
   margin: 5px;
   text-align: center;
+  border: 3px outset gray;
   font-size: 1.5em;
+  width: 65px;
   -moz-user-select:none;
-  height: 57px;
+  height: 51px;
 }
 
 .toggleButtonTrue{
   display:block;
   font-size: 1.5em;
+  color: black;
+  background-color: lightgray;
   margin: 20px;
   -moz-user-select:none;
   width: 150px;
@@ -144,13 +147,16 @@ form{
 .toggleButtonFalse{
   display:block;
   font-size: 1.5em;
+  color: black;
+  background-color: lightgray;
   margin: 20px;
+  border: 3px outset gray;
   -moz-user-select:none;
   width: 150px;
   text-align: center;
 }
 
-/*.inputContainer{
+.inputContainer{
   position:absolute;
   top: 275px;
   left: 450px;
@@ -160,13 +166,12 @@ form{
   border: 3px inset gray;
   font-size: 2em;
   overflow:hidden;
-}*/
-
+}
 .keyboard{
   position:absolute;
   display: block;
   z-index: 10;
-  bottom: 85px;
+  bottom: 15px;
   left: 30px;
 }
 
@@ -186,14 +191,14 @@ form{
   font-size: 1em;
   -moz-opacity: 0.2;
 }
-
 .inputPage{
   position: absolute;
   top: 0px;
   left: 0px;
+  background-color: white;
   z-index: 1;
-  height: 520px;
-  width: 995px;
+  height: 595px;
+  width: 795px;
   overflow: hidden;
 }
 
@@ -206,20 +211,13 @@ form{
   font-size: 2em;
 	overflow: hidden;
 }
-
 .helpTextClass {
+  top: 5px;
+  position: absolute;
   font-size: 2em;
-  padding-top: 5px;
-  padding-left: 25px;
-  width: 820px;
-  -moz-user-select: none;
-}
-
-.inputFrameClass {
-  border: 2px solid black;
-  margin-left:25px;
-  background: #F0F0F0;
-  width:750px;  
+  left: 25px;
+  width: 620px;
+  -moz-user-select:none;
 }
 
 .progressAreaSearchPage {
@@ -322,121 +320,19 @@ form{
 	width: 250px;
 }
 
-#showDataButton, #lessthan, #greaterthan, #equals, #unknown {
+#SHIFT, #space, #qwerty, #showDataButton, #lessthan, #greaterthan, #equals, #unknown {
 	display: none;
 }
 
-button.navButton {
- float:right;
- margin-top:20px;
-}
-
-button span {
- top:-1px;
-}
-
-button { 
-  display:block;
-  color: white;
-  -moz-user-select:none;
-  -moz-user-focus:disabled;
-  border:0; 
-  cursor:pointer; 
-  font-weight:bold; 
-  padding:0 8px 0 0; 
-  text-align:center; 
-}
-
-button span { 
-  -moz-user-select:none;
-  -moz-user-focus:disabled;
-  position:relative; 
-  display:block; 
-  white-space:nowrap; 
-  padding:0 0 0 8px; 
-}
-
-
-
-button, button.blue { 
-  background:#000; 
-  font-size:1.3em; 
-  height:57px; 
-  line-height:57px;
-  min-width:48px;
-}
-button span, button.blue span { 
-  background:#000; 
-  height:57px; 
-  line-height:57px;
-  color:#fff; 
-}
-/*button:hover, button:hover.blue {
-  background:#00f; 
-}
-button:hover span, button:hover.blue span {
-  background:#00f; 
-}*/
-
-button.red { 
-  background:#f00; 
-}
-button.red span { 
-  background:#f00; 
-}
-/*button:hover.red {
-  background:#f00; 
-}
-button:hover.red span {
-  background:#f00; 
-}*/
-
-button.green { 
-  background:green;
-}
-button.green span { 
-  background:#0f0; 
-}
-/*button:hover.green  {
-	background:url(/images/buttons/btn_right_hover_green.png) right no-repeat; 
-}
-button:hover.green span {
-	background:url(/images/buttons/btn_left_hover_green.png) left no-repeat; 
-}*/
-
-button.gray { 
-  background:#aaa; 
-}
-button.gray span { 
-  background:#aaa; 
-}
-/*button:hover.gray {
-	background:url(/images/buttons/btn_right_hover_gray.png) right no-repeat; 
-}
-button:hover.gray span {
-	background:url(/images/buttons/btn_left_hover_gray.png) left no-repeat; 
-}*/
-
-button.dark { 
-  background:#777; 
-}
-button.dark span { 
-  background:#777; 
-}
-/*button:hover.dark {
-	background:url(/images/buttons/btn_right_hover_dark.png) right no-repeat; 
-}
-button:hover.dark span {
-	background:url(/images/buttons/btn_left_hover_dark.png) left no-repeat; 
-}*/
-
-
-
 #cancelButton {
-  float:left;
+  margin-top: 50px;
+  background-color: tomato;
+  border-color: tomato;
 }
 
 #nextButton {
+  background-color: springgreen;
+  border-color: springgreen;
 }
 
 #backspace, #num, #space, #date, #abc{
@@ -462,22 +358,29 @@ button:hover.dark span {
   bottom: 0px;
 }
 
+.dateselector, .keyboard {
+	background: #FFFF99;
+	border: solid 2px lightblue;
+}
 .dateselector input, button{
+	font-size: 1.5em;
 	margin: 5px;
+	padding: 5px;
 	text-align: center;
 }
 
 .dateselector input {
-  font-size:1.7em;
 	width: 100px;
 }
 .dateselector button {
+	width: 100px;
 	display:block;
 	font-size: 1.5em;
 	color: black;
+	background-color: lightgray;
 	margin: 5px;
+	border: 3px outset gray;
 	text-align: center;
-  width:90%;
 }
 
 .ShortSelectList #scrollUp, 
@@ -504,6 +407,32 @@ button:hover.dark span {
   padding-bottom: 10px;
 }
 
+.longSelectList #options,
+.longSelectList #viewport {
+  height: auto;
+ -moz-user-select:none;
+ font-size: 1.1em;
+}
+
+.longSelectList {
+ -moz-user-select:none
+}
+
+.longSelectList li {
+  margin-bottom: 1px;
+  margin-top: 1px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  font-size: 1.35em;
+}
+
+.longSelectList #scrollUp, 
+.longSelectList #scrollDown, 
+.longSelectList #clearButton,
+.longSelectList .touchscreenTextInput {
+  display: none;
+}
+
 .Numeric #options, 
 .Numeric #viewport{
   display: none;
@@ -524,17 +453,6 @@ button:hover.dark span {
   margin-bottom: 5px;
 }
 
-.NumbersOnlyWithDecimal #star,
-.NumbersOnlyWithDecimal #abc,
-.NumbersOnlyWithDecimal #date,
-.NumbersOnlyWithDecimal #minus,
-.NumbersOnlyWithDecimal #plus,
-.NumbersOnlyWithDecimal #slash,
-.NumbersOnlyWithDecimal #comma,
-.NumbersOnlyWithDecimal #percent{
-  display: none
-}
-
 .NumbersOnly #star,
 .NumbersOnly #abc,
 .NumbersOnly #date,
@@ -547,21 +465,15 @@ button:hover.dark span {
   display: none
 }
 
-.NumbersOnlyWithDecimal .keyboardButton,
-.NumbersOnlyWithDecimal .buttonLine,
 .NumbersOnly .keyboardButton,
 .NumbersOnly .buttonLine{
+  height: auto;
 }
 
-.NumbersOnlyWithDecimal .keyboardButton,
 .NumbersOnly .keyboardButton{
   font-size: 2em;
-}
-
-.NoControls #viewport,
-.NoControls #keyboard,
-.NoControls .touchscreenTextInput{
-  display: none;
+  height: 90px;
+  width: 90px;
 }
 
 .date_year #viewport{
@@ -630,6 +542,8 @@ display:block;
 }
 
 .date_year .numericKeyboard .keyboardButton {
+  height:88px;
+  width:155px;
 }
 
 .date_year .keyboard{
@@ -642,6 +556,8 @@ display:block;
 
 
 .date_year .keyboardButton{
+  background-color:lightgray;
+  border:3px outset gray;
   color:black;
   display:inline;
   font-size:1.5em;
@@ -676,57 +592,17 @@ display:block;
   font-size:.5em;
 }
 
-.centered {
-  width:400px;
-  height:400px;
-  position:absolute;
-  margin-left:-200px;
-  left:50%;
-}
-.centered button {
-  margin:0 auto;
-}
-
-.infoBarClass {
-  -moz-user-select:none;
-  color:gray;
-  font-size:1.3em;
-  margin-left:25px;
-  padding-top:5px;
-  width:750px;  
-  border-bottom:2px dotted;
-}  
-
-.LongSelectList #viewport,
-.LongSelectList #options{
-  -moz-user-select:none;
-  height: 17em;
-}
-
-.LongSelectList #keyboard{
-  display:none;
-}
-
-.LongSelectList #li {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.MultiSelectList #viewport,
-.MultiSelectList #options{
-  -moz-user-select:none;
-  height: 17em;
-}
-
-.MultiSelectList #keyboard{
-  display:none;
-}
-
-.MultiSelectList #li {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+#popupBox_for_pg_info{
+ display:none;
+ z-index:600;
+ width:420px;
+ height:210px;
+ border: solid 1px #000000; 
+ background:lightgreen;
+ position:absolute;
+ left:100px;
+ top:100px;
+ text-align:center;
+ font-size:28;
+ color:white;
 }
