--- a/application/app/views/layouts/clinic.html.erb
+++ b/application/app/views/layouts/clinic.html.erb
@@ -14,79 +14,70 @@
     <%= javascript_include_tag "barcode" %>
     <script src="/javascripts/jquery-1.3.2.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-      jQuery(document).ready(function($) {    
+      jQuery(document).ready(function($) {
         $('#logout').click(function() { window.location = '/logout' })
         $('#find').click(function() { window.location = '/people/search' })
         $('#find_by_id').click(function() { window.location = '/people/find_by_national_id' })
-        //if ($('#staging')) $('#staging').click(function() { window.location = 'http://staging/clinic' })        
-        $('#new_desk').click(function() { window.location = '/location' })        
-        $('#set_date').click(function() { window.location = '/people/set_datetime' })        
-    
+        //if ($('#staging')) $('#staging').click(function() { window.location = 'http://staging/clinic' })
+        $('#new_desk').click(function() { window.location = '/location' })
+        $('#set_date').click(function() { window.location = '/people/set_datetime' })
+
         session_datetime = '<%=session[:datetime].to_date rescue '' %>'
 
         if (session_datetime != ''){
           document.getElementById('set_date').innerHTML = '<span>Reset date</span>'
-          $('#set_date').click(function() { window.location = '/people/reset_datetime' })        
+          $('#set_date').click(function() { window.location = '/people/reset_datetime' })
         } /*else {
-          document.getElementById('set_date').innerHTML = '<span>Set date</span>'
-          $('#set_date').click(function() { window.location = '/people/set_datetime' })        
-        }*/
-      }) 
+    document.getElementById('set_date').innerHTML = '<span>Set date</span>'
+    $('#set_date').click(function() { window.location = '/people/set_datetime' })
+    }*/
+      })
     </script>
-    <style type="text/css">
-      #find_by_id {
-        width: 215px;
-      }
 
-      #tab {
-        height:312px;
-      }
-      #barcode {
-        background:transparent none repeat scroll 0 0;
-        border-color:-moz-use-text-color -moz-use-text-color silver;
-        border-style:none none solid;
-        border-width:medium medium 1px;
-        font-family:"Nimbus Sans L","Arial Narrow",sans-serif;
-        font-size:2.2em;
-        padding-left:5px;
-        width:400px;      
-      }
-      #header div {
-        font-weight:normal;
-        float:none;
-        clear:both;
-      }
-    </style>
-    
   </head>
-  <body id="mateme">  
-    <div id="container">      
-      <div id="content">
-        <div id="header" style="height:160px;margin-top:-15px;padding-left:20px;">
-          <h1><%= Location.current_location.name %></h1>
-          <div id="version" style="padding-top:44px;"><%= version %></div>
-          <div id="user" style="margin-top:-4px;">Logged in as <%= User.current_user.username %></div>
-          <form id='barcodeForm' action="/people/search">
-            <div style="float:left;font-size:20px;font-style: normal;font-weight: bold;">Scan patient barcode:</div>
-            <%= text_field_tag :identifier, '', {:id => 'barcode', :class => 'touchscreenTextInput', :style => 'position:absolute' } %>
-            <%= submit_tag "Submit", :style => "display:none" %>
-          </form>
+  <body id="container">
+    <div id="content">
+      <div id="header">
+        <div id="facility-name"><%= Location.current_location.name %></div>
+        <div id="app-version"><%= version %></div>
+        <div id="user">Logged in as <%= User.current_user.username %></div>
+        <form id='barcodeForm' action="/people/search">
+          <div id="barcode-label">Scan Patient Barcode:
+            <%= text_field_tag :identifier, '', {:id => 'barcode'} %>
+          </div>
+          <%= submit_tag "Submit", :style => "display:none" %>
+        </form>
+      </div>
+
+<%= yield %>
+      <div id="nav" class="nav">
+        <ul>
+          <li><a class="active" href="">Overview</a></li>
+          <li><a href="">Administration</a>
+
+          </li></ul>
+      </div>
+
+      <div id="tab" >
+        <div class="panel" style="width: 980px;">
+          <div style="height: 970px; overflow: auto;">
+
+          </div>
         </div>
-        
-        <%= yield %>  
-        <div id="footer" class="dark">
-          <div id="buttons" class="buttons" style="top:0px">
-            <button id="logout" class="red left"><span>Logout</span></button>
-            <button id="find" class="green" style="width:250px;"><span>Find Patient By Name</span></button>
-            <button id="find_by_id" class="green" style="width:300px;"><span>Find Patient By National Id</span></button>
-            <!--button id="staging" class="yellow"><span>Staging</span></button-->
-            <% if development_environment? %>
-              <button id="new_desk" class="blue" style="width:150px;"><span>Swap desk</span></button>
-            <% end %>
-            <!--button id="set_date" class=""><span>Set date</span></button-->
-          </div>          
-        </div>    
-      </div>  
+      </div>
+
+      <div id="footer" class="dark">
+        <div id="buttons" class="buttons" style="top:0px">
+          <button id="logout" class="red left"><span>Logout</span></button>
+          <button id="find" class="green" style="width:250px;"><span>Find Patient By Name</span></button>
+          <button id="find_by_id" class="green" style="width:300px;"><span>Find Patient By National Id</span></button>
+          <!--button id="staging" class="yellow"><span>Staging</span></button-->
+          <% if development_environment? %>
+            <button id="new_desk" class="blue" style="width:150px;"><span>Swap desk</span></button>
+          <% end %>
+          <!--button id="set_date" class=""><span>Set date</span></button-->
+        </div>
+      </div>
     </div>
   </body>
 </html>
