--- a/application/app/views/layouts/report.html.erb
+++ b/application/app/views/layouts/report.html.erb
@@ -14,34 +14,34 @@
     <%= javascript_include_tag "barcode" %>
     <script src="/javascripts/jquery-1.3.2.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-      jQuery(document).ready(function($) {    
+      jQuery(document).ready(function($) {
         $('#logout').click(function() { window.location = '/clinic/reports' })
         $('#find').click(function() {
 
           if (document.getElementById("find").innerHTML != "<span>Back</span>")
           {
-              submit_mastercard();
+            submit_mastercard();
           }
           else
           {
-              window.location = '/report/data_cleaning';
+            window.location = '/report/data_cleaning';
           }
 
-          })
-        //if ($('#staging')) $('#staging').click(function() { window.location = 'http://staging/clinic' })        
+        })
+        //if ($('#staging')) $('#staging').click(function() { window.location = 'http://staging/clinic' })
       })
 
-    function submit_mastercard()
-    {
+      function submit_mastercard()
+      {
         document.forms["myform"].submit();
-    }
+      }
 
-    //the function is to be called at the end of the table i.e. to insert the last row
-    function insertBlankRow ()
-    {
-       var lastRow = '<tr style = "height:auto; border:solid 0px black;"> <td style ="height:auto; border:solid 0px black;"></td></tr>';
-       document.write(lastRow);
-    }
+      //the function is to be called at the end of the table i.e. to insert the last row
+      function insertBlankRow ()
+      {
+        var lastRow = '<tr style = "height:auto; border:solid 0px black;"> <td style ="height:auto; border:solid 0px black;"></td></tr>';
+        document.write(lastRow);
+      }
     </script>
     <style type="text/css">
       #tab {
@@ -55,7 +55,7 @@
         font-family:"Nimbus Sans L","Arial Narrow",sans-serif;
         font-size:2.2em;
         padding-left:5px;
-        width:400px;      
+        width:400px;
       }
       #header div {
         font-weight:normal;
@@ -90,30 +90,28 @@
       }
 
     </style>
-    
+
   </head>
-  <body id="mateme">  
-    <div id="container">      
-      <div id="content" style = "position : relative; width : 85%; margin-left : -43%;">
-      
-        <%= yield %>
+  <body id="container">
+    <div id="content" style = "position : relative; width : 85%; margin-left : -43%;">
+
+      <%= yield %>
 
       <% if session[:mastercard_ids].length.to_i != 0 %>
-         <% session[:mastercard_ids] = session[:mastercard_ids].uniq.sort! rescue ""%>
+        <% session[:mastercard_ids] = session[:mastercard_ids].uniq.sort! rescue ""%>
         <form action="/patients/mastercard?source=data_cleaning"  method="post" id="myform">
         </form>
       <% end rescue "" %>
 
-        <div id="footer" class="dark">
-          <div id="buttons" class="buttons" style="top:0px">
-            <button id="logout" class="red left" style="position :relative; float:right;"><span>Finish</span></button>
-            <button id="find" class="green" style="position :relative; float:right;"><span>Mastercards</span></button>
-            <% if User.current_user.admin? %>
+      <div id="footer" class="dark">
+        <div id="buttons" class="buttons" style="top:0px">
+          <button id="logout" class="red left" style="position :relative; float:right;"><span>Finish</span></button>
+          <button id="find" class="green" style="position :relative; float:right;"><span>Mastercards</span></button>
+          <% if User.current_user.admin? %>
             <!--button id="staging" class="yellow"><span>Staging</span></button-->
-            <% end %>
-          </div>          
-        </div>    
-      </div>  
+          <% end %>
+        </div>
+      </div>
     </div>
   </body>
 </html>
