--- a/application/app/views/layouts/summary.rhtml
+++ b/application/app/views/layouts/summary.rhtml
@@ -12,43 +12,39 @@
       function print(){
         document.location = "/patients/print_mastercard_record/?patient_id=<%=@patient_id%>&date=<%=@date%>"
       }
-
     </script>
-    <%= stylesheet_link_tag "mateme" %>
+    <%= stylesheet_link_tag "forms" %>
     <%= stylesheet_link_tag fancy_or_high_contrast_touch %>
     <%= javascript_include_tag "preload" %>
   </head>
-  <body id="mateme">  
-    <div id="container">
-      <div id="content">
-        <div id="description" style="color:#777;position:absolute;margin-top:-70px;">
-          <% if show_intro_text %>
-            This demonstration site contains the work of <a href="http://pih.org" style="color:white">Partners In Health</a>
-            and <a href="http://baobabhealth.org" style="color:white">Baobab Health.</a>
-            This EMR is built on top of OpenMRS 1.5 and is currently being used in Neno and Ngoni, Malawi.
-            It is designed for an 800 by 600 pixel touch screen at the point of patient contact. 
-            <br/><a href="mailto:jeff@baobabhealth.org" style="color:white">Email</a> with questions.
-            Login using the sample login "demo", password "demo" and location "7".
-          <% end %>  
-        </div>
-        <div style="padding-left: 15px;font-size:1.2em;">
-          <% unless flash[:notice].nil? %>
-            <p id="flash_notice" style="color: green"><%= flash[:notice] %></p>
-          <% end %>
-          <% unless flash[:error].nil? %>
-            <p id="flash_error" style="color: red"><%= flash[:error] %></p>
-          <% end %>
-        </div>  
-        <%= yield %>  
-        <div id="footer">
-          <div id="buttons" class="buttonsDiv" style="top:0px">
-            <button id="print" class="yellow" onclick="print();" style="float:left;"><span>Print</span></button>
-            <button id="finishButton" class="button navButton green" onclick="if (tt_cancel_destination) window.location = tt_cancel_destination;"><span>Finish</span></button></div>
-            <div id="tt_extraButtons"/>
-          </div>
-          
-        </div>    
-      </div>  
+  <body id="container">
+    <div id="content">
+      <div id="description" style="color:#777;position:absolute;margin-top:-70px;">
+        <% if show_intro_text %>
+          This demonstration site contains the work of <a href="http://pih.org" style="color:white">Partners In Health</a>
+          and <a href="http://baobabhealth.org" style="color:white">Baobab Health.</a>
+          This EMR is built on top of OpenMRS 1.5 and is currently being used in Neno and Ngoni, Malawi.
+          It is designed for an 800 by 600 pixel touch screen at the point of patient contact.
+          <br/><a href="mailto:jeff@baobabhealth.org" style="color:white">Email</a> with questions.
+          Login using the sample login "demo", password "demo" and location "7".
+        <% end %>
+      </div>
+      <div style="padding-left: 15px;font-size:1.2em;">
+        <% unless flash[:notice].nil? %>
+          <p id="flash_notice" style="color: green"><%= flash[:notice] %></p>
+        <% end %>
+        <% unless flash[:error].nil? %>
+          <p id="flash_error" style="color: red"><%= flash[:error] %></p>
+        <% end %>
+      </div>
+      <%= yield %>
+      <div id="footer">
+        <div id="buttons" class="buttonsDiv" style="top:0px">
+          <button id="print" class="yellow" onclick="print();" style="float:left;"><span>Print</span></button>
+          <button id="finishButton" class="button navButton green" onclick="if (tt_cancel_destination) window.location = tt_cancel_destination;"><span>Finish</span></button></div>
+        <div id="tt_extraButtons"/>
+      </div>
+    </div>
     </div>
   </body>
 </html>
