Incorporated changes from new Baobab system interface

--- a/application/public/stylesheets/dashboard.css
+++ b/application/public/stylesheets/dashboard.css
@@ -1,9 +1,17 @@
-/* colors 
-.yellow { background-color:rgb(255,255,153); }
-.red { background-color:rgb(255,51,51); }
-.green { background-color:rgb(61,235,61); }
-.dark { background-color:rgb(51,51,51); }
-.silver { background-color:rgb(204,204,204); }*/
+/**************************************************************************
+  * dashboard.css
+  *   manages layout of ouchscreen dashboards
+  *   CSS for the Touchscreen Toolkit library
+  *
+  * (c) 2011 Baobab Health Trust (http://www.baobabhealth.org)
+  *
+  * For lincense details, see the README.md file
+  *
+  * Browser:    Firefox
+  * Interface:  Touchscreen
+  * Resolution: 800X600
+  *
+  **************************************************************************/
 
 .blue { background-color:rgb(153,153,255); }
 .even { background-color:rgb(230,230,255); }
@@ -16,21 +24,10 @@ body{
   -moz-user-select:none;
 }
 
-#mateme {
+#container {
   background-color:#000000;
 }
 
-#container {
-  background-color:#000000;
-  display:block;
-  height:1px;
-  left:0;
-  overflow:visible;
-  position:absolute;
-  top:50%;
-  visibility:visible;
-  width:100%;
-}
 
 #content {
   background:#FFFFFF;
@@ -48,7 +45,8 @@ body{
   background-color:rgb(51,51,51);
   color:#CADCEA;
   height:80px;
-  width:100%;
+  width: 98%;
+  padding-right: 20px;
   bottom:0px;
   position:absolute;
   overflow:hidden;
@@ -85,25 +83,29 @@ button {
   float:left;
 }
 
-#header {
-  height:60px;
-}
 
-#header h1 {
-  margin-top:10px;
-  position:absolute;
-}
-
-#header div {
-  float:right;
+#header{
   font-size:1.3em;
-  font-weight:bold;
-  margin-top:18px;
-  margin-right:10px;
+  margin: 10px;
+  width: 98%;
 }
+
+#barcode-label{
+  font-size: 25px;
+  font-style: normal;
+  font-weight: bold;
+}
+
+#facility-name{
+  font-size: 1.5em;
+  font-style: normal;
+  font-weight: bold;
+}
+
 .nav {
   height:42px;
   z-index:2;
+  margin-left:5px;
 }
 
 .nav ul {
@@ -140,12 +142,24 @@ button {
 
 #tab {
   margin-top:1px;
+  margin-left: 6px;
+  margin-right: 6px;
   background-color:#ddd;
-  height:565px;
-  border-top:1px solid black;
-  border-bottom:1px solid black;
+  height:454px;
+  width:98%;
+  /*border-top:1px solid black;
+  border-bottom:1px solid black;*/
+  border:1px solid black;
+
 }
 
+#tab.app-dashboard{
+  width: 980px;
+}
+
+#tab.client-dashboard{
+  width: 720px;
+}
 ul, ul li, ul li div {
   -moz-user-select:none;
 }
@@ -183,8 +197,6 @@ ul.list li div.encounter {
 } 
 
 div.panel {
-  width:480px;
-  float:left;  
   margin:6px;
   margin-top:2px;
   padding:2px;
@@ -272,5 +284,44 @@ div.panel h2 {
   padding-top:10px;
   text-decoration:none;
   text-align:center;
+}
+#personal-details{
+  font-size: 1em;
+  height: 150px;
+  max-width: 720px;
+  margin: 5px;
+  overflow: auto;
+}
+
+#menu {
+  float: right;
+  height: 680px;
+  overflow: auto;
+  width: 253px;
+  border: thin solid #EEEEEE;
+  margin-right: 5px;
+  margin-top: 5px;
+}
+.menu-button{
+  width:245px;
+}
+
+#barcode {
+  background:transparent none repeat scroll 0 0;
+  border-color:-moz-use-text-color -moz-use-text-color silver;
+  border-style:none none solid;
+  border-width:medium medium 1px;
+  font-family:"Nimbus Sans L","Arial Narrow",sans-serif;
+  font-size: 1.2em;
+  width:400px;
+  vertical-align: super;
+}
+
+.client-dashboard{
+  width:720px;
+}
+
+.details-label {
+  font-weight:bold;
 }
 
