--- a/application/public/stylesheets/touch-fancy.css
+++ b/application/public/stylesheets/touch-fancy.css
@@ -1,32 +1,20 @@
-/******
-Browser: Firefox
-Interface: Touchscreen 
-Resolution: 800X600
+/**************************************************************************
+  * touch-fancy.css
+  *   displays a fancy look and feel
+  *   it is used together with form.css or dashboard.css
+  *
+  *   CSS for the Touchscreen Toolkit library
+  *
+  * (c) 2011 Baobab Health Trust (http://www.baobabhealth.org)
+  *
+  * For lincense details, see the README.md file
+  *
+  * Browser:    Firefox
+  * Interface:  Touchscreen
+  * Resolution: 800X600
+  *
+  **************************************************************************/
 
- --------------------------------------------------------------------
- 
- Touchscreen Toolkit
-
- (c) 2006 Baobab Health Partnership www.baobabhealth.org
-
-This library is free software; you can redistribute it and/or
-modify it under the terms of the GNU Lesser General Public
-License as published by the Free Software Foundation; either
-version 2.1 of the License, or (at your option) any later version.
-
-This library is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-Lesser General Public License for more details.
-
-You should have received a copy of the GNU Lesser General Public
-License along with this library; if not, write to the Free Software
-Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
-
- --------------------------------------------------------------------
-
-
-******/
 
 body{
   font-family: "Nimbus Sans L", "Arial Narrow", sans-serif;
@@ -101,12 +89,14 @@ form{
 }
 
 .buttonsDiv {
-  display:block;
-  height:80px;
-  position:absolute;
-  top:670px;
-  width:990px;
-  z-index:10;
+  background-color: #333333;
+  display: block;
+  height: 80px;
+  position: absolute;
+  top: 670px;
+  width:  98%;
+  padding-right: 20px;
+/*  z-index:10;*/
 }
 
 /*.button {
