--- a/application/app/views/layouts/dashboard.html.erb
+++ b/application/app/views/layouts/dashboard.html.erb
@@ -11,6 +11,9 @@
     </script>
     <%= stylesheet_link_tag fancy_or_high_contrast_touch %>
     <%= stylesheet_link_tag "dashboard" %>
+    <%= javascript_include_tag "jquery" %>
+    <%= javascript_include_tag "utils" %>
+
     <script src="/javascripts/jquery-1.3.2.min.js" type="text/javascript"></script>
     <script src="/javascripts/touchscreenYesNo.js" type="text/javascript"></script>
     <script type="text/javascript">
