--- a/application/public/stylesheets/dashboard.css
+++ b/application/public/stylesheets/dashboard.css
@@ -83,7 +83,6 @@ button {
   float:left;
 }
 
-
 #header{
   font-size:1.3em;
   margin: 10px;
@@ -160,15 +159,19 @@ button {
 #tab.client-dashboard{
   width: 700px;
 }
+
 ul, ul li, ul li div {
   -moz-user-select:none;
 }
+
 ul.list li {
   clear:both;
 }
+
 ul.list li.active {
   background-color:#5AF;
 }
+
 ul.list {
   font-size:1.3em;
   border:2px solid black;
@@ -178,10 +181,12 @@ ul.list {
   background-color:white;
   overflow:auto;
   height:112px;
-}  
+}
+
 ul.small {
   font-size:1.1em;
 }
+
 ul.list li.data {
   vertical-align:top;
   display:block;
@@ -189,17 +194,22 @@ ul.list li.data {
   padding:6px;
   cursor:pointer;
 }
+
 ul.list li div.void {
   float:left;
   padding-right:7px;
 }
+
 ul.list li div.encounter {
 } 
 
 div.panel {
-  margin:6px;
-  margin-top:2px;
-  padding:2px;
+  border: 1px solid;
+  max-height: 430px;
+  margin: 10px;
+  overflow: auto;
+  padding: 2px;
+  width: 955px;
 }
 
 div.panel h2 {
@@ -209,6 +219,44 @@ div.panel h2 {
   font-weight:bold;
   margin-top:0px;
   margin-right:10px;
+}
+
+.report_button{
+  background-color: grey;
+  border-bottom-color: black;
+  border-bottom-width: 1px;
+  border-left-color-ltr-source: physical;
+  border-left-color-rtl-source: physical;
+  border-left-color-value: black;
+  border-left-style-ltr-source: physical;
+  border-left-style-rtl-source: physical;
+  border-left-style-value: solid;
+  border-left-width-ltr-source: physical;
+  border-left-width-rtl-source: physical;
+  border-left-width-value: 1px;
+  border-right-color-ltr-source: physical;
+  border-right-color-rtl-source: physical;
+  border-right-color-value: black;
+  border-right-style-ltr-source: physical;
+  border-right-style-rtl-source: physical;
+  border-right-style-value: solid;
+  border-right-width-ltr-source: physical;
+  border-right-width-rtl-source: physical;
+  border-right-width-value: 1px;
+  border-top-color: black;
+  border-style: outset;
+  border-top-width: 1px;
+  color: white;
+  display: block;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 16px;
+  padding-top: 20px;
+  height: 30px;
+  font-size: 1.3em;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
 }
 
 #flash {
@@ -239,52 +287,7 @@ div.panel h2 {
   position:absolute;
   top:235px;
 }
-.report_button{
-  /*
-  text-align:center;
-  text-decoration:none;
-  width:100%;
-  height:60px;
-  border-top-style:outset;
-  border-top-color:gray;
-  border-bottom-style:outset;
-  -moz-user-select:none;*/
-  background-color:grey;
-  border-bottom-color:black;
-  border-bottom-width:1px;
-  border-left-color-ltr-source:physical;
-  border-left-color-rtl-source:physical;
-  border-left-color-value:black;
-  border-left-style-ltr-source:physical;
-  border-left-style-rtl-source:physical;
-  border-left-style-value:solid;
-  border-left-width-ltr-source:physical;
-  border-left-width-rtl-source:physical;
-  border-left-width-value:1px;
-  border-right-color-ltr-source:physical;
-  border-right-color-rtl-source:physical;
-  border-right-color-value:black;
-  border-right-style-ltr-source:physical;
-  border-right-style-rtl-source:physical;
-  border-right-style-value:solid;
-  border-right-width-ltr-source:physical;
-  border-right-width-rtl-source:physical;
-  border-right-width-value:1px;
-  border-top-color:black;
-  /*border-top-style:solid;
-  border-bottom-style:solid;*/
-  border-style:outset;
-  border-top-width:1px;
-  color:white;
-  display:block;
-  padding-bottom:10px;
-  padding-left:10px;
-  padding-right:16px;
-  padding-top:10px;
-  padding-top:10px;
-  text-decoration:none;
-  text-align:center;
-}
+
 #personal-details{
   font-size: 1em;
   height: 150px;
@@ -302,6 +305,7 @@ div.panel h2 {
   margin-right: 5px;
   margin-top: 5px;
 }
+
 .menu-button{
   width:260px;
 }
@@ -326,4 +330,24 @@ div.panel h2 {
   font-size:  1em;
   color:      #FFFFFF;
   background: #808080;
+}
+
+#stats {
+  width: 100%;
+  background: white;
+}
+#stats td{
+  text-align: right;
+}
+
+#stats a {
+  width: 200px;
+  float: right;
+}
+
+#tcontent{
+  float: left;
+  padding-left: 5px;
+  position: absolute;
+  top: 235px;
 }
