--- a/application/app/views/clinic/overview.html.erb
+++ b/application/app/views/clinic/overview.html.erb
@@ -4,38 +4,30 @@
   }) 
 </script>
 <style type="text/css">
-  #stats {
-    width:98%;
-    border:1px solid black;
-    margin:10px;    
-    background:white;
-  } 
-  #stats td, #stats th {
-    text-align:center;
-  }
+
 </style>
 <div id="tab" style="height: 461px;">
-  <div class="panel" style="width:980px">
+  <div class="panel">
     <h2>Current Patient Statistics</h2>
-    <div style="height:970px;overflow:auto;">
-    <table id="stats" style="height: 400px;" cellpadding="10">
-      <tr>
-        <th style="text-align:left;">Encounter Type</th>
-        <th>Me</th>
-        <th>Today</th>
-        <th>This Year</th>
-        <th>Total to Date</th>
-      </tr>
-      <% @types.each do |type| %>
-        <tr class="<%= cycle('even', 'odd') %>">
-          <td style="text-align:left;"><%= type %></td>
-          <td><%= @me[type] %></td>
-          <td><%= @today[type] %></td>
-          <td><%= @year[type] %></td>
-          <td><%= @ever[type] %></td>
+    <div style="">
+      <table id="stats" cellpadding="10">
+        <tr>
+          <th style="text-align:left;">Encounter Type</th>
+          <th>Me</th>
+          <th>Today</th>
+          <th>This Year</th>
+          <th>Total to Date</th>
         </tr>
-      <% end %>        
-    </table>
+        <% @types.each do |type| %>
+          <tr class="<%= cycle('even', 'odd') %>">
+            <td style="text-align:left;"><%= type %></td>
+            <td><%= @me[type] %></td>
+            <td><%= @today[type] %></td>
+            <td><%= @year[type] %></td>
+            <td><%= @ever[type] %></td>
+          </tr>
+        <% end %>
+      </table>
     </div>
   </div>        
 </div>
