--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -68,9 +68,9 @@
   <button id="finish" class="blue menu-button" onmousedown="window.location = 'select_clinic.html'"><span>Clinic Schedules</span></button> <br/>
   <%if @patient.female_adult?%>
     <button id="finish" class="blue menu-button" onmousedown="window.location = '/encounters/new/female_symptoms?patient_id=<%=@patient.id%>'"><span>Symptoms</span></button> <br/>
+    <button id="finish" class="blue menu-button" onmousedown="window.location = '/encounters/new/pregnancy_status?patient_id=<%=@patient.id%>'"><span>Pregnancy Status</span></button> <br/>
   <%else%>
     <button id="finish" class="blue menu-button" onmousedown="window.location = '/encounters/new/child_symptoms?patient_id=<%=@patient.id%>'"><span>Symptoms</span></button> <br/>
   <%end%>
-  <button id="finish" class="blue menu-button" onmousedown="window.location = '/encounters/new/symptoms?patient_id=<%=@patient.id%>'"><span>Pregnancy</span></button> <br/>
   <button id="finish" class="blue menu-button" onmousedown="window.location = 'tips_and_reminders.html'"><span>Tips and Reminders</span></button> <br/>
 </div>
