--- a/application/app/views/layouts/clinic.html.erb
+++ b/application/app/views/layouts/clinic.html.erb
@@ -12,6 +12,8 @@
     <%= stylesheet_link_tag fancy_or_high_contrast_touch %>
     <%= stylesheet_link_tag "dashboard" %>
     <%= javascript_include_tag "barcode" %>
+    <%= javascript_include_tag "jquery" %>
+    <%= javascript_include_tag "utils" %>
     <script src="/javascripts/jquery-1.3.2.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       jQuery(document).ready(function($) {
@@ -52,8 +54,8 @@
       <div id="footer" class="dark">
         <div id="buttons" class="buttons" style="top:0px">
           <button id="logout" class="red left"><span>Logout</span></button>
-          <button id="find" class="green" style="width:250px;"><span>Find Patient By Name</span></button>
-          <button id="find_by_id" class="green" style="width:300px;"><span>Find Patient By National Id</span></button>
+          <button id="find" class="green" style="width:180px;"><span>Find by Name</span></button>
+          <button id="find_by_id" class="green" style="width:230px;"><span>Find by National Id</span></button>
           <!--button id="staging" class="yellow"><span>Staging</span></button-->
           <% if development_environment? %>
             <button id="new_desk" class="blue" style="width:150px;"><span>Swap desk</span></button>
