Modified the table style

--- a/application/app/views/clinic/overview.html.erb
+++ b/application/app/views/clinic/overview.html.erb
@@ -3,14 +3,12 @@
   jQuery(document).ready(function($) {
   }) 
 </script>
-<style type="text/css">
 
-</style>
 <div id="tab" style="height: 461px;">
   <div class="panel">
     <h2>Current Patient Statistics</h2>
     <div style="">
-      <table id="stats" cellpadding="10">
+      <table id="stats" cellpadding="10" style="height: 400px;">
         <tr>
           <th style="text-align:left;">Encounter Type</th>
           <th>Me</th>
@@ -31,3 +29,4 @@
     </div>
   </div>        
 </div>
+
